began styling about page

--- a/css/index.css
+++ b/css/index.css
@@ -290,3 +290,36 @@ footer nav a {
 #box10 {
   background: dodgerblue;
 }
+
+/* About Page Styles */
+
+.navcontainer {
+  margin-top: 2%;
+}
+
+/* about section styles */
+.about {
+  padding: 0 25px;
+  padding-bottom: 3%;
+  border-bottom: black 1px dashed;
+}
+.about p {
+  list-style: height 1.2em;
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.mid {
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
+}
+/* strategy section */
+.strategy img {
+  border: 1px red solid;
+  width: 30%;
+}
+.work img {
+  border: 1px solid red;
+  width: 30%;
+}
